--- a/index.html
+++ b/index.html
@@ -9,5 +9,33 @@
 <body>
     <h1> Pokemon </h1>
     <p> Pokemon is a Japanese anime that some people like</p>
+    
+    <div>
+            <ol> 
+                    <li> Pikachu </li> 
+                    <li> Charzard</li>
+             </ol>
+        <ul> 
+            <li> Fire </li>
+            <li> Poison </li>
+        </ul>
+    </div>
+    <hr>
+   
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlSlLZPbDdc7t1AI-sohGSqN_HZ_VE92g3hBOaUYtdtQIEJfsE" alt="an image bout Pokemon"> 
+    <table> 
+        <tr>
+            <th>Pokemon</th>
+            <th>Type</th>
+        </tr>
+    <table>
+        <td> Pikachu</td>
+        </td> Lightning</td>
+        <td> Charzard</td>
+        <td> Fire</td>
+     </table>
+            
+
+   
 </body>
 </html>
