--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     </div>
     <hr>
    
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlSlLZPbDdc7t1AI-sohGSqN_HZ_VE92g3hBOaUYtdtQIEJfsE" alt="an image bout Pokemon">
+    <br>
+    <br>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlSlLZPbDdc7t1AI-sohGSqN_HZ_VE92g3hBOaUYtdtQIEJfsE" alt="an image bout Pokemon"> 
     <table> 
         <tr>
